force-app/main/default/objects/Feedback_Question_Response__c/Feedback_Question_Response__c.object-meta.xml
<CustomObject>
    <label>Feedback Question Response</label>
    <nameField>
        <displayFormat>FQR-{00000}</displayFormat>
        <label>Feedback Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>