force-app/main/default/objects/Feedback_Question_Response__c/fields/Feedback_Question__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback Question</label>
    <referenceTo>FeedbackQuestion__c</referenceTo>
    <relationshipLabel>Feedback Question Responses</relationshipLabel>
    <relationshipName>Feedback_Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>