force-app/main/default/objects/Feedback_Question_Response__c/fields/KeywordMatch__c.field-meta.xml
<CustomField>
    <fullName>KeywordMatch__c</fullName>
    <label>Match Phrase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>